--- a/AboutMe.html
+++ b/AboutMe.html
@@ -33,7 +33,22 @@
           </div>
         </div>
       </nav>
-    <div class="bg"></div>
+      
+    <div class="bg">
+    
+      <div class="p-3 mb-2 bg-transparent text-dark" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">About me</h5>
+          <p class="card-text">I am Sandra</p>
+        </div>
+      </div>
+    </div>
+
+  
+
+
+
+
     <table class="table table-dark table-hover">
             <thead>
               <tr>
@@ -54,7 +69,7 @@
                 <th scope="row">2</th>
                 <td>Jacob</td>
                 <td>Thornton</td>
-                <td>@fat</td>
+                <td>@row</td>
               </tr>
               <tr>
                 <th scope="row">3</th>
