change to about me page

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -35,49 +35,29 @@
       </nav>
       
     <div class="bg">
-    
-      <div class="p-3 mb-2 bg-transparent text-dark" style="width: 18rem;">
+
+      <!-- <div class="text-right " style="width: 18rem;">
         <div class="card-body">
           <h5 class="card-title">About me</h5>
           <p class="card-text">I am Sandra</p>
         </div>
+      </div> -->
+
+      <div class="align-items-center text-center card p-3 mb-2 bg-transparent text-dark border-0 container-fluid"> 
+        <div class="card-body">
+          <h1 class="card-title text-dark">About me</h1>
+          <h4 class="card-text text-secondary">I am Sandra</h4>
+          <a href="favourites.html" class="btn btn-light">Go to favourites</a>
+        </div> 
       </div>
-    </div>
+    </div> 
 
   
 
 
 
 
-    <table class="table table-dark table-hover">
-            <thead>
-              <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@row</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td colspan="2">Larry the Bird</td>
-                <td>@twitter</td>
-              </tr>
-            </tbody>
-      </table>
+
 
 
 
