--- a/favourites.html
+++ b/favourites.html
@@ -4,36 +4,67 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Favourites</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="AboutMe.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="favourites.html">Favourites</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="ToDoList.html">To do list</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
 
 
-    <table>
+
+    <table class="table table-secondary table-hover">
+      <thead>
         <tr>
-            <th>Item</th>
-            <th>Picture</th>
+          <th scope="col">Item</th>
+          <th scope="col"colspan="2">Image</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row">Family</th>
+          <td colspan="2"><a href="https://outsider.ie/ireland/family-friendly-activities-ireland/">
+            <img alt="Family" src="images/family.jpeg" width="150" height="70">
+         </a></td>
         </tr>
         <tr>
-            <th>Family</th>
-            <th><a href="https://outsider.ie/ireland/family-friendly-activities-ireland/">
-                <img alt="Family" src="images/family.jpeg" width=150" height="70">
-             </a></th>
+          <th scope="row">Good Food</th>
+          <td colspan="2"><a href="https://www.galwaytourism.ie/best-restaurants/">
+            <img alt="Food" src="images/food.png"width="150" height="70">
+         </a></td>
         </tr>
         <tr>
-            <th>Good Food</th>
-            <th><a href="https://www.galwaytourism.ie/best-restaurants/">
-                <img alt="Food" src="images/food.png"width=150" height="70">
-             </a></th>
+          <th scope="row">The Outdoors</th>
+          <td colspan="2">
+            <img alt="Outdoors" a href="https://www.discoverireland.ie/adventure-centres-ireland" src="images/outdoors.jpeg"width="150" height="70">
+         </a></td>
         </tr>
-        <tr>
-            <th>The Outdoors</th>
-            <th><a href="https://www.discoverireland.ie/adventure-centres-ireland">
-                <img alt="Outdoors" src="images/outdoors.jpeg"width=150" height="70">
-             </a></th>
-        </tr>
-    </table>
+      </tbody>
+</table>
+
+
 </body>
 <footer> &copy Copyright Sandra</footer>
 </html>
