change to title

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -26,6 +26,9 @@
                 <a class="nav-link" href="ToDoList.html">To do list</a>
               </li>
             </ul>
+
+            
+
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
@@ -33,32 +36,17 @@
           </div>
         </div>
       </nav>
-      
+
+
     <div class="bg">
-
-      <!-- <div class="text-right " style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">About me</h5>
-          <p class="card-text">I am Sandra</p>
-        </div>
-      </div> -->
-
       <div class="align-items-center text-center card p-3 mb-2 bg-transparent text-dark border-0 container-fluid"> 
         <div class="card-body">
-          <h1 class="card-title text-dark">About me</h1>
+          <h1 class="tagline card-title text-dark">About me</h1>
           <h4 class="card-text text-secondary">I am Sandra</h4>
           <a href="favourites.html" class="btn btn-light">Go to favourites</a>
         </div> 
       </div>
     </div> 
-
-  
-
-
-
-
-
-
 
 
 </body>
